--- a/Macauto_MAM/GoogleService-Info.plist
+++ b/Macauto_MAM/GoogleService-Info.plist
@@ -23,15 +23,15 @@
 	<key>STORAGE_BUCKET</key>
 	<string>macauto-mam-project.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false/>
+	<false></false>
 	<key>IS_APPINVITE_ENABLED</key>
-	<false/>
+	<false></false>
 	<key>IS_GCM_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:964809222223:ios:18b7021286678b46</string>
 	<key>DATABASE_URL</key>
